Changed width to fix the overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -55,7 +55,7 @@ h3 {
 }
 
 .skill-row {
-  width: 50%;
+  width: 40%;
   margin: 100px auto 100px auto;
   text-align: left;
   line-height: 2;
@@ -67,7 +67,7 @@ h3 {
   margin-right: 30px;
 }
 .aegisub {
-  width: 20%;
+  width: 22%;
   float: right;
   margin-left: 30px;
 }
